fix: Actualizar referencia al modelo GPT-4 en el frontend

--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
                   </div>
                   <div class="model-info">
                     <i class="fas fa-robot"></i>
-                    <span>Modelo: GPT-3.5 Turbo</span>
+                    <span>Modelo: GPT-4</span>
                   </div>
                 </div>
               </div>
