--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@
 
     <footer class="fixed bottom-0 left-0 right-0 bg-white/80 backdrop-blur-md border-t border-gray-100">
       <div class="container mx-auto px-4 py-3 text-center text-sm text-gray-600">
-        <p>&copy; 2024 Aloxter. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Aloxter. Todos los derechos reservados. Hecho con ❤️ por Alexander Ruiz</p>
       </div>
     </footer>
 
