--- a/public/index.html
+++ b/public/index.html
@@ -213,7 +213,7 @@
     </main>
 
     <footer class="fixed bottom-0 left-0 right-0 bg-white/80 backdrop-blur-md border-t border-gray-100">
-      <div class="container mx-auto px-4 py-3 text-center text-sm text-gray-600">
+      <div class="container mx-auto px-4 py-3 text-center text-xs text-gray-400">
         <p>&copy; 2025 Aloxter. Todos los derechos reservados. Hecho con ❤️ por Alexander Ruiz</p>
       </div>
     </footer>
